# Lime

./: Cargo.toml  README.md
.github/workflows/: lime.yaml
res/: example
src/: ast.rs  env.rs  error.rs  interpreter.rs  lib.rs  lime_std.rs  main.rs  parser.rs  peg_test.rs  preprocessor.rs  repl.rs  repl_helper.rs  resolver.rs  value.rs
src/lime_std/: mod.rs  prelude.lm  primitive.rs  vec.rs
src/repl/: helper.rs  mod.rs
src/value/: class.rs  func.rs  mod.rs  object.rs  utils.rs
tests/: assoc.rs  assoc_magic.rs  basic.rs  block.rs  common.rs  comparison.rs  error.rs  example.rs  func.rs  func_builtin.rs  ident.rs  if.rs  logical.rs  nil.rs  object.rs  primitive.rs  range.rs  readme.rs  value_ref.rs  var.rs  vec.rs  while.rs
tests/res/: assoc.lm  assoc_magic_equals.lm  assoc_magic_finalize.lm  block  block.lm  by_ref.lm  error.lm  example.lm  func.lm  func_builtin.lm  if.lm  logical  object.lm  primitive.lm  range.lm  value_ref.lm  vec.lm  while  while.lm
