[package]
name = "lime"
version = "0.2.0"
authors = ["Bugen Zhao <i@bugenzhao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.6"
rustyline = "7.1"
rustyline-derive = "0.4"
thiserror = "1.0"
colored = "2.0"
structopt = "0.3"
snailquote = "0.3"
lazy_static = "1.4"
itertools = "0.10"
by_address = "1.0"

[dev-dependencies]
rand = "0.7"
